README file updated on new commands for running apache pinot components separately.